# yggdrasil

./: .appveyor.yml  .buildinfo  .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  HISTORY.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  autowrap.html  c_format_strings.html  cis_interface.communication.html  cis_interface.communication.tests.html  cis_interface.dataio.html  cis_interface.dataio.tests.html  cis_interface.datatypes.html  cis_interface.datatypes.tests.html  cis_interface.drivers.html  cis_interface.drivers.tests.html  cis_interface.examples.html  cis_interface.examples.tests.html  cis_interface.html  cis_interface.interface.html  cis_interface.interface.tests.html  cis_interface.metaschema.datatypes.html  cis_interface.metaschema.datatypes.tests.html  cis_interface.metaschema.html  cis_interface.metaschema.properties.html  cis_interface.metaschema.properties.tests.html  cis_interface.metaschema.tests.html  cis_interface.serialize.html  cis_interface.serialize.tests.html  (+167 more)
_modules/: collections.html  index.html  yggdrasil.html
_sources/: c_format_strings.rst.txt  cis_interface.communication.rst.txt  cis_interface.communication.tests.rst.txt  cis_interface.dataio.rst.txt  cis_interface.dataio.tests.rst.txt  cis_interface.datatypes.rst.txt  cis_interface.datatypes.tests.rst.txt  cis_interface.drivers.rst.txt  cis_interface.drivers.tests.rst.txt  cis_interface.examples.rst.txt  cis_interface.examples.tests.rst.txt  cis_interface.interface.rst.txt  cis_interface.interface.tests.rst.txt  cis_interface.metaschema.datatypes.rst.txt  cis_interface.metaschema.datatypes.tests.rst.txt  cis_interface.metaschema.properties.rst.txt  cis_interface.metaschema.properties.tests.rst.txt  cis_interface.metaschema.tests.rst.txt  cis_interface.rst.txt  cis_interface.serialize.rst.txt  cis_interface.serialize.tests.rst.txt  cis_interface.tests.rst.txt  cli.rst.txt  code.rst.txt  code_c.rst.txt  code_cpp.rst.txt  code_python.rst.txt  config.rst.txt  dataio_c.rst.txt  docker.rst.txt  getting_started.rst.txt  index.rst.txt  install.rst.txt  interface_c.rst.txt  interface_cpp.rst.txt  model_transformation.rst.txt  release.rst.txt  remote.rst.txt  schema_table_comm_general.rst.txt  schema_table_comm_subtype.rst.txt  (+78 more)
_static/: documentation_options.js
advanced/: YggInterface_R.html  code.html  code_c.html  code_cpp.html  code_fortran.html  code_matlab.html  code_python.html  code_r.html  dataio_c.html  dataio_cpp.html  dataio_m.html  datatypes.html  datatypes_cpp.html  index.html  interface_c.html  interface_cpp.html  interface_fortran.html  interface_m.html  interface_py.html  interface_r.html  io_drivers.html  metaschema.html  model_drivers.html  model_interface.html  schema.html  serialization.html  serialize_c.html  yggdrasil_code.html
autodoc/: cis_interface.dataio.html  cis_interface.dataio.tests.html  cis_interface.drivers.html  cis_interface.drivers.tests.html  cis_interface.examples.html  cis_interface.html  cis_interface.interface.html  cis_interface.tests.html  modules.html
ci/: cis_install.bat  create_conda_env.sh  install-compilers.bat  install-czmq-linux.sh  install-czmq-osx.sh  install-czmq-windows.bat  install-czmq.sh  install-lpy-linux.sh  install-matlab-posix.sh  install-r-posix.sh  install-rapidjson-linux.sh  install-rapidjson-osx.sh  install-rapidjson-windows.bat  install-rmqserver-linux.sh  install-rmqserver-osx.sh  install-rmqserver-windows.bat  install-rmqserver-windows.ps1  pretest_script.sh  start-rmqserver-linux.sh  start-rmqserver-windows.bat  test_script.sh  ygg_install.bat
cis_interface/: .cis_metaschema.json  .cis_schema.yml  __init__.py  _version.py  backwards.py  command_line.py  config.py  defaults.cfg  getline_win32.h  platform.py  regex_posix.h  regex_win32.cpp  regex_win32.h  runner.py  scanf.py  schema.py  stdint.h  timing.py  tools.h  tools.py  units.py  yamlfile.py
cis_interface/interface/: CMakeLists.txt  CisInterface.c  CisInterface.cpp  CisInterface.h  CisInterface.hpp  CisInterface.m  CisInterface.py  CisInterfaceClass.m  PsiClusterRun  PsiInterface.h  PsiInterface.hpp  PsiInterface.m  PsiInterface.py  PsiInterfaceClass.m  PsiRun.py  __init__.py  matlab2python.m  psi_recv_array.m  psi_save.m  psi_send_array.m  psirun  psirunpar  psirunpar.1  python2matlab.m  reduce_dim.m  scanf.py  setup.sh
cis_interface/interface/tests/: test_CisInterface.py  test_PsiInterface.py
class_tables/: class_table_ArchiverBase_args.html  class_table_ArchiverBase_attr.html  class_table_ArchiverBase_classattr.html  (+21 more)
yggdrasil/languages/C/: CMakeLists.txt  CisInterface.h  YggInterface.c  YggInterface.h  YggLibrary.h  constants.h  getline_win32.h  glibc_version_fix.h  install.py  python_wrapper.c  python_wrapper.h  tools.h
yggdrasil/languages/C/communication/: AsciiFileComm.h  AsciiTableComm.h  ClientComm.h  CommBase.h  DefaultComm.h  IPCComm.h  MPIComm.h  ServerComm.h  ZMQComm.h  ZMQCommorig.h  comm_header.h  communication.h
yggdrasil/languages/C/dataio/: AsciiFile.h  AsciiTable.h
yggdrasil/languages/C/datatypes/: AnyMetaschemaType.h  AsciiTableMetaschemaType.h  DirectMetaschemaType.h  JSONArrayMetaschemaType.h  JSONObjectMetaschemaType.h  MetaschemaType.h  ObjDict.h  ObjMetaschemaType.h  PlyDict.h  PlyMetaschemaType.h  PyInstMetaschemaType.h  PyObjMetaschemaType.h  ScalarMetaschemaType.h  SchemaMetaschemaType.h  datatypes.cpp  datatypes.h  datatypes_utils.h  serialization.h  utils.h
yggdrasil/languages/C/regex/: regex_posix.h  regex_win32.cpp  regex_win32.h
yggdrasil/languages/C/serialize/: FormatSerialize.h  ObjSerialize.h  base64.h  serialize.h
yggdrasil/languages/CPP/: CMakeLists.txt  CisInterface.hpp  YggInterface.cpp  YggInterface.hpp  YggLibrary.hpp
yggdrasil/languages/CPP/cmake/: Findlibczmq.cmake  Findlibzmq.cmake
yggdrasil/languages/CPP/communication/: CommBase.cpp  CommBase.hpp  IPCComm.cpp  IPCComm.hpp  MPIComm.cpp  MPIComm.hpp  ZMQComm.cpp  ZMQComm.hpp  datatypes.cpp  datatypes.hpp  regex.cpp  regex.hpp  tools.cpp  tools.hpp
(+4572 files in other folders)
