[build-system]
requires = [
    "setuptools >= 40.6.0",
    "wheel",
    "numpy==1.13.3; python_version<'3.5'",
    "oldest-supported-numpy; python_version>='3.5'",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py27', 'py36', 'py37', 'py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | examples
  | rapidjson
  | _version\.py
)/
'''

