[build-system]
requires = [
    "setuptools >= 40.6.0",
    "wheel",
    "numpy==1.13.3; python_version<'3.5'",
    "oldest-supported-numpy; python_version>='3.5'",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
skip = "pp* cp2* cp33* cp34* cp35* cp36* *musllinux* cp310-manylinux_ppc64le cp311-manylinux_ppc64le"
test-skip = "cp310-win32 cp310-manylinux_i686 cp311-win32 cp311-manylinux_i686 *ppc64le"
test-requires = ["pytest", "flaky"]
test-command = "ygginfo && pytest -m subset_rapidjson --import-mode=importlib {project}/tests"
before-test = "pip install --only-binary=numpy,scipy,matplotlib,contourpy numpy scipy matplotlib"

# [tool.cibuildwheel.linux]
# before-all = "yum install -y openblas-devel"

# [[tool.cibuildwheel.overrides]]
# select = "cp3{7,8,9,10,11}-manylinux_i686"
# before-all = ""

# [[tool.cibuildwheel.overrides]]
# select = "cp3{7,8,9,10,11}-manylinux_ppc64le"
# before-test = "pip install --only-binary=numpy numpy"
# before-all = "yum install -y openblas-devel"

[tool.black]
line-length = 88
target-version = ['py27', 'py36', 'py37', 'py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | examples
  | rapidjson
  | _version\.py
)/
'''

