[metadata]
description-file = README.md

[nosetests]
cover-package=cis_interface
with-coverage=1

[coverage:run]
omit = 
     */python?.?/*
     */lib-python/?.?/*.py
     */lib_pypy/_*.py
     */site-packages/ordereddict.py
     */site-packages/nose/*
     */unittest2/*
     cis_interface/tests/scripts/python_model.py
     cis_interface/command_line.py
     cis_interface/scanf.py
     cis_interface/drivers/lpy_model.py
     cis_interface/_version.py

[coverage:report]
sort = Cover
ignore_errors = True
show_missing = True
exclude_lines = 
     pragma: no cover
     pragma: debug
     def __repr__
     if 0:
     if False:
     if __name__ == .__main__.:

# configuration for flake8
[flake8]
# W293: whitespace on blank lines is ok
# W503: new convention says line breaks should happen before operators
ignore = W293, W503
# Raise the default 79 limit
max-line-length = 90
# Ignore some well known paths
exclude = .venv,.tox,dist,doc,build,*.egg

[versioneer]
VCS = git
style = pep440
versionfile_source = cis_interface/_version.py
versionfile_build = cis_interface/_version.py
tag_prefix =
parentdir_prefix = cis_interface-