[metadata]
description-file = README.md

[nosetests]
cover-package=yggdrasil
with-coverage=1

[tool:pytest]
cov-fail-under = 100
ignore = yggdrasil/rapidjson/
norecursedirs = .* build dist CVS _darcs {arch} *.egg rapidjson
python_files = test_*.py __init__.py

[coverage:run]
omit = 
     # */python?.?/*
     */lib-python/?.?/*.py
     */lib_pypy/_*.py
     */site-packages/ordereddict.py
     */site-packages/nose/*
     */unittest2/*
     */yggdrasil/tests/scripts/python_model.py
     */yggdrasil/command_line.py
     */yggdrasil/scanf.py
     */yggdrasil/languages/*/install.py
     */yggdrasil/languages/LPy/lpy_model.py
     */yggdrasil/languages/Python/CisInterface.py
     */yggdrasil/_version.py
     */yggdrasil/rapidjson/*
     */yggdrasil/examples/*/src/*.py
     */yggdrasil/doctools.py

[coverage:report]
sort = Cover
ignore_errors = True
show_missing = True
exclude_lines =
     pragma: Python 3.8
     pragma: no cover
     pragma: debug
     pragma: in progress
     def __repr__
     def description_prefix
     if 0:
     if False:
     if __name__ == .__main__.:

# configuration for flake8
[flake8]
# W293: whitespace on blank lines is ok
# W503: new convention says line breaks should happen before operators
# E203: No space before colon, not pep8 compliant
ignore = W293, W503, E203
# Raise the default 79 limit
max-line-length = 90
# Ignore some well known paths
exclude = .venv,.tox,dist,doc,build,*.egg,./yggdrasil/rapidjson/,./yggdrasil/interface/YggInterface.py,./yggdrasil/interface/CisInterface.py

[versioneer]
VCS = git
style = pep440
versionfile_source = yggdrasil/_version.py
versionfile_build = yggdrasil/_version.py
tag_prefix =
parentdir_prefix = yggdrasil-
